[FS-6]:Payment Method (#12)
* feat: attach payment method

* refactor: add set default payment method

* refactor: add attach_payment_method specs

* feat: list payment methods

* feat: attach_payment_method

* refactor: added assert_stripe_customer_id_attribute

* fix: tests

* feat: add payment methods

* fix: return true when customer does not exist

* feat: list payment methods

* chore: doc

* chore: added new spec

* refactor: remove routes redraw

* refactor: test organization

* feat: add payment methods routes

* feat: payment methods controller

* feat: attach payment method

* feat: fix swagger
