# spec/dummy/swagger/v1/swagger.yaml
@@ -4,6 +4,173 @@ info:
   title: API V1
   version: v1
 paths:
+  "/dummy_users/payment_methods":
+    get:
+      summary: List payment methods
+      tags:
+      - Payment Methods
+      description: Lists current user payment methods.
+      security:
+      - bearer: []
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              examples:
+                test_example:
+                  value:
+                  - id: test_pm_2
+                    object: payment_method
+                    type: card
+                    billing_details:
+                      address:
+                        city: New Orleans
+                        country: US
+                        line1: Bourbon Street 23
+                        line2: 
+                        postal_code: '10000'
+                        state: 
+                      email: foo@bar.com
+                      name: John Dolton
+                      phone: 
+                    customer: test_cus_1
+                    metadata:
+                      order_id: '123456789'
+                    card:
+                      brand: visa
+                      checks:
+                        address_line1_check: 
+                        address_postal_code_check: 
+                        cvc_check: pass
+                      country: FR
+                      exp_month: 10
+                      exp_year: 2050
+                      fingerprint: Hr3Ly5z5IYxsokWA
+                      funding: credit
+                      generated_from: 
+                      last4: '4242'
+                      three_d_secure_usage:
+                        supported: true
+                      wallet: 
+                  - id: test_pm_3
+                    object: payment_method
+                    type: card
+                    billing_details:
+                      address:
+                        city: New Orleans
+                        country: US
+                        line1: Bourbon Street 23
+                        line2: 
+                        postal_code: '10000'
+                        state: 
+                      email: foo@bar.com
+                      name: John Dolton
+                      phone: 
+                    customer: test_cus_1
+                    metadata:
+                      order_id: '123456789'
+                    card:
+                      brand: visa
+                      checks:
+                        address_line1_check: 
+                        address_postal_code_check: 
+                        cvc_check: pass
+                      country: FR
+                      exp_month: 10
+                      exp_year: 2050
+                      fingerprint: Hr3Ly5z5IYxsokWA
+                      funding: credit
+                      generated_from: 
+                      last4: '4242'
+                      three_d_secure_usage:
+                        supported: true
+                      wallet: 
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                    object:
+                      type: string
+                    billing_details:
+                      type: object
+                    card:
+                      type: object
+                    created:
+                      type: integer
+                    customer:
+                      type: string
+                    livemode:
+                      type: boolean
+                    metadata:
+                      type: object
+                    type:
+                      type: string
+    post:
+      summary: Attach payment method
+      tags:
+      - Payment Methods
+      description: Lists current user payment methods.
+      security:
+      - bearer: []
+      parameters: []
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              examples:
+                test_example:
+                  value:
+                    id: test_pm_4
+                    object: payment_method
+                    type: card
+                    billing_details:
+                      address:
+                        city: New Orleans
+                        country: US
+                        line1: Bourbon Street 23
+                        line2: 
+                        postal_code: '10000'
+                        state: 
+                      email: foo@bar.com
+                      name: John Dolton
+                      phone: 
+                    customer: test_cus_1
+                    metadata:
+                      order_id: '123456789'
+                    card:
+                      brand: visa
+                      checks:
+                        address_line1_check: 
+                        address_postal_code_check: 
+                        cvc_check: pass
+                      country: FR
+                      exp_month: 10
+                      exp_year: 2050
+                      fingerprint: Hr3Ly5z5IYxsokWA
+                      funding: credit
+                      generated_from: 
+                      last4: '4242'
+                      three_d_secure_usage:
+                        supported: true
+                      wallet: 
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                id:
+                  type: string
+                set_as_default:
+                  type: boolean
+                  nullable: true
+              require:
+              - id
   "/dummy_users/subscriptions":
     get:
       summary: List dummy user subscriptions
@@ -17,6 +184,18 @@ paths:
           description: successful
           content:
             application/json:
+              examples:
+                test_example:
+                  value:
+                  - id: 3
+                    stripe_subscription_id: a2e5ae28-74cd-46b1-9cad-40b884352b3b
+                    status: active
+                    subscriptable_type: DummyUser
+                    subscriptable_id: 4
+                    deleted_at: 
+                    canceled_at: 
+                    created_at: '2022-07-11T21:10:20.565Z'
+                    updated_at: '2022-07-11T21:10:20.565Z'
               schema:
                 type: array
                 items:
